tests/0005-assign-grouping.src.err
ERROR: not yet implemented
 | (a) = "value";
         ^
